--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>校园之声广播站</title>
     <style>
-        /* 图片加载动画 */
+        /* 加载动画 */
         .loader {
             position: fixed;
             top: 0;
@@ -20,10 +20,13 @@
             transition: opacity 0.5s;
         }
         
-        .loader-img {
-            width: 80px;
-            height: 80px;
-            animation: spin 1.5s linear infinite;
+        .loader-circle {
+            width: 50px;
+            height: 50px;
+            border: 5px solid #f3f3f3;
+            border-top: 5px solid #3498db;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
         }
 
         @keyframes spin {
@@ -31,29 +34,107 @@
             100% { transform: rotate(360deg); }
         }
 
-        /* 保留原有内容样式... */
+        /* 内容样式 */
+        body {
+            font-family: '微软雅黑', sans-serif;
+            line-height: 1.6;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            opacity: 0;
+            animation: fadeIn 1s forwards;
+        }
+
+        .section {
+            margin: 40px 0;
+            padding: 20px;
+            background: #f9f9f9;
+            border-radius: 8px;
+            transform: translateY(20px);
+            opacity: 0;
+            animation: slideUp 0.8s forwards;
+        }
+
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            max-width: 800px;
+            margin: 20px auto;
+        }
+
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        @keyframes fadeIn {
+            to { opacity: 1; }
+        }
+
+        @keyframes slideUp {
+            to { transform: translateY(0); opacity: 1; }
+        }
+
+        h1, h2 {
+            color: #2c3e50;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <!-- 修改后的加载动画 -->
+    <!-- 加载动画 -->
     <div class="loader">
-        <img src="broadcast-logo.png" alt="广播站Logo" class="loader-img">
+        <div class="loader-circle"></div>
     </div>
 
-    <!-- 保留原有内容结构... -->
+    <h1>校园之声广播站</h1>
+    
+    <div class="section">
+        <h2>关于我们</h2>
+        <p>校园之声广播站成立于2005年，是学校最具影响力的传媒组织之一。我们致力于传播校园资讯，分享优质音乐，打造温馨的校园听觉空间。</p>
+    </div>
+
+    <div class="section">
+        <h2>节目预告</h2>
+        <p>本周五下午5点将播出特别节目《毕业季特辑》，欢迎同学们踊跃投稿分享你的校园故事！</p>
+    </div>
+
+    <div class="section">
+        <h2>往期节目回顾</h2>
+        <div class="video-container">
+            <!-- 替换为实际视频链接 -->
+            <iframe src="https://example.com/video-player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope" 
+                    allowfullscreen></iframe>
+        </div>
+    </div>
 
     <script>
-        // 修改后的加载控制
+        // 加载动画控制
         window.addEventListener('load', function() {
             setTimeout(function() {
                 document.querySelector('.loader').style.opacity = '0';
                 document.body.style.opacity = '1';
-                setTimeout(() => {
-                    document.querySelector('.loader').style.display = 'none';
-                }, 500);
+                setTimeout(() => document.querySelector('.loader').style.display = 'none', 500);
             }, 1000);
 
-            // 保留原有动画逻辑...
+            // 滚动动画触发
+            const sections = document.querySelectorAll('.section');
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if(entry.isIntersecting) {
+                        entry.target.style.animation = 'slideUp 0.8s forwards';
+                    }
+                });
+            }, { threshold: 0.1 });
+
+            sections.forEach(section => observer.observe(section));
         });
     </script>
 </body>
